Fixed currentAverage overflow bug and added simple tab navigation

--- a/hac.css
+++ b/hac.css
@@ -873,12 +873,12 @@ body.logged_in #grades {
 	font-size: 20px;
 	font-weight: 400;
 	color: #222222;
-	width: 20px;
+	/*width: 20px;*/
 	height: 20px;
 	line-height: 20px;
 	display: inline-block;
 	padding: 8px;
-	border-radius: 50%;
+	border-radius: 30px;
 }
 
 .TableHeader th {
@@ -920,6 +920,9 @@ body.logged_in #grades {
 	box-shadow: inset 0 0 0 2px rgba(0,0,0,0.25)
 }
 
+.CategoryAverageRow {
+	font-weight: bold;
+}
 .CategoryAverage {
 	text-align: center;
 }
@@ -957,7 +960,7 @@ body.logged_in #grades {
 	height: 100%;
 	overflow: auto;
 	width: 100%;
-	background: rgba(255,255,255,0.8);
+	background: rgba(255,255,255,0.9);
 	padding: 32px 64px;
 	box-sizing: border-box;
 	z-index: -1;
